domains/networking/netpol/task2/svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monitoring
  name: prometheus
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prometheus
  strategy: {}
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
